fix: 주문 요청 수정